--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,12 +26,14 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+body, html, #root {
   margin: 0;
   /* display: flex;
   place-items: center; */
   min-width: 320px;
   min-height: 100vh;
+  background: #fff !important;
+  color: #222 !important;
 }
 
 h1 {
@@ -68,6 +70,13 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  body, html, #root {
+    background: #fff !important;
+    color: #222 !important;
   }
 }
 
